[metadata]
name = iOSpy
author = Christopher Brown
author_email = io@henrian.com
url = https://github.com/chbrown/iOSpy
description = iOS MobileSync backup data extraction
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = iospy
python_requires = >=3.6
install_requires =
  appdirs>=1.4.0
  click>=7.0
setup_requires =
  pytest-runner
  setuptools-scm
tests_require =
  pytest
  pytest-black
  pytest-cov

[options.entry_points]
console_scripts =
  ios = iospy.__main__:main

[aliases]
test = pytest

[tool:pytest]
addopts =
  --black
  --cov=iospy
  --cov-branch
